--- a/website (myntra)/addtocard.html
+++ b/website (myntra)/addtocard.html
@@ -105,7 +105,7 @@
                 </div>
                 <hr>
 
-                <div class="">
+                <div class="" id="to">
                     <button class="btn form-control"
                         style="font-size: 13px; background-color:   rgb(233, 61, 103); color: white; "><a href="home.html" style="text-decoration: none; color: white; font-weight: bold;">CHECKOUT</a></button>
                 </div>
